@@ -1,3 +1,8 @@
+2019-03-08  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* config/arm/arm.h (TARGET_FP16_TO_DOUBLE): Add TARGET_VFP_DOUBLE
+	requirement.
+
 2019-03-08  Uroš Bizjak  <ubizjak@gmail.com>
 
 	PR target/68924
